samples/_failures_safe/1761440348_96aa76_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_91f6f3b2.c: In function ‘queue_dequeue’:
./samples/SAFE/__tmp_91f6f3b2.c:161:10: error: expected ‘;’ at end of input
  161 |     queue
      |          ^
      |          ;
./samples/SAFE/__tmp_91f6f3b2.c:161:5: error: expected declaration or statement at end of input
  161 |     queue
      |     ^~~~~
